# Verity

./: .gitignore  Dockerfile  LICENCE.txt  README.md  benchmark.py  create_hybrid_dataset.py  docker-compose.yml  requirements.txt  run_pipeline.sh
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  types.rs
data/: Dockerfile  create_hybrid_dataset.py  hybrid_claims_train.jsonl  requirements.txt
database/: Dockerfile  embed_and_upsert.py  requirements.txt
database/qdrant_storage/: raft_state.json
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/store/: useVerityStore.ts
models/: export_models.py
qdrant_storage/: raft_state.json
